--- a/index.html
+++ b/index.html
@@ -14,7 +14,7 @@
       This is a placeholder for base href that will be replaced by the value of
       the `--base-href` argument provided to `flutter build`.
     -->
-    <base href="https://aalystama.github.io/bloc-counter-build/">
+    <base href="/">
 
     <meta charset="UTF-8">
     <meta content="IE=Edge" http-equiv="X-UA-Compatible">
@@ -34,7 +34,7 @@
 
     <script>
         // The value below is injected by flutter build, do not touch.
-        var serviceWorkerVersion = '655179275';
+        var serviceWorkerVersion = '3195942509';
     </script>
     <!-- This script adds the flutter initialization JS code -->
     <script src="flutter.js" defer></script>
@@ -57,6 +57,9 @@
 <script>
     function obtainRandomString(value) {
         dartFunction({"input": value});
+    }
+    function callAndroid(text) {
+        Android.showToast(text);
     }
 </script>
 </body>
